# SkillBrowser

./: .gitignore  .gitmodules  AGENTS.md  Plan.md  README.md  config.example.toml  pyproject.toml
data/eval/: local_hard_retrieval.jsonl
data/eval/toolret/: bge_base_candidates_smoke30.jsonl  result_smoke30_bge_base_first_stage.json  result_smoke30_hybrid_current.json  result_smoke30_no_instruction.json  result_smoke30_with_instruction.json  result_smoke3_rankgpt_hybrid_stage_with_instruction.json  result_smoke9_hybrid_with_instruction.json  result_smoke9_rankgpt_hybrid_stage_with_instruction.json  toolret_queries_smoke30.jsonl  toolret_queries_smoke9.jsonl
data/eval/toolret/parquet/: queries_apibank.parquet  queries_apigen.parquet  queries_appbench.parquet  queries_autotools-food.parquet  queries_autotools-music.parquet  queries_autotools-weather.parquet  queries_craft-math-algebra.parquet  tools_code.parquet  tools_customized.parquet
data/skills/academic_abstract/: skill.md  skill.yaml
data/skills/csv_read/: skill.md  skill.yaml
data/skills/data_exploration_workflow/: skill.md  skill.yaml
data/skills/paper_claim_method_finding/: skill.md  skill.yaml
data/skills/pdf_extract_text/: skill.md  skill.yaml
scripts/: sra_bench.py  sra_build_embeddings.py  sra_prepare.ps1  sra_retrieve_hybrid.ps1  sra_run_hybrid_eval.ps1
src/: agent.py  cli.py  config.py  llm.py  loader.py  reader.py  registry.py  schema.py
src/benchmarks/: __init__.py  retrieval.py  retrieval_runner.py  sra.py  sra_agent.py  sra_preprocess.py  toolret.py  toolret_runner.py
src/core/: __init__.py  embeddings.py  search.py  sections.py  selectors.py  views.py
src/skill_search_agent/: __init__.py  agent.py  cli.py  config.py  evaluation.py  gatewaybench.py  loader.py  reader.py  registry.py  schema.py  search.py  sections.py  selectors.py  views.py
tests/: test_agent.py  test_config.py  test_gatewaybench_compare.py  test_mvp.py  test_selectors.py  test_sra_agent.py  test_sra_benchmark.py  test_sra_embeddings.py  test_sra_preprocess.py  test_toolret.py
tests/fixtures/: gatewaybench_lite.jsonl  retrieval_eval.jsonl  toolret_candidates.jsonl  toolret_queries.jsonl  toolret_tools.jsonl
tests/fixtures/bad_path_skill/bad/: skill.yaml
tests/fixtures/duplicate_skills/one/: skill.md  skill.yaml
tests/fixtures/duplicate_skills/two/: skill.md  skill.yaml
tests/fixtures/skills/paper_claim/: skill.md  skill.yaml
tests/fixtures/skills/pdf_extract/: skill.md  skill.yaml
