[project]
name = "skill-search-agent"
version = "0.1.0"
description = "Local skill search and reading MVP"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.5.0",
    "einops>=0.8.2",
    "pydantic>=1.10,<2",
    "PyYAML>=6.0",
    "torch>=2.8.0",
    "transformers==4.51.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
skill-agent = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
